--- a/rfidQbe/src/app/modal/modal.page.html
+++ b/rfidQbe/src/app/modal/modal.page.html
@@ -30,14 +30,14 @@
         <ion-row>
           <!-- <ion-col> -->
           <ion-item style='--highlight-height:0;max-width:270px;padding-right:10px;'>
-            <ion-label position='floating'>Used After</ion-label>
+            <ion-label position='floating'>Put Into Use From</ion-label>
             <ion-input [(ngModel)]='dateUseMoreThan' (click)='openCalendar("dateUseMoreThan","Used After")' type='text'>
             </ion-input>
             <ion-icon *ngIf='dateUseMoreThan!==""' slot='end' style='margin-bottom:-15px'
               (click)='clearDate("dateUseMoreThan")' name='close'></ion-icon>
           </ion-item>
           <ion-item style='--highlight-height:0;max-width:270px;padding-right:10px;'>
-            <ion-label position='floating'>Used Before</ion-label>
+            <ion-label position='floating'>Put Into Use To</ion-label>
             <ion-input [(ngModel)]='dateUseLessThan' (click)='openCalendar("dateUseLessThan","Used Before")'
               type='text'>
             </ion-input>
@@ -84,26 +84,34 @@
   <div *ngIf='type==="ManufactureYearFilter"'>
     <ion-row padding>
       <ion-col offset-md='3' offset-lg='3' offset-xl='3'>
-        <ion-row>
-          <ion-item style='--highlight-height:0;max-width:270px;padding-right:10px;'>
+        <!-- <ion-row> -->
+          <ion-item style='--highlight-height:0;max-width:300px;padding-right:10px;'>
             <ion-label position='floating'>Manufactured After</ion-label>
-            <ion-input [(ngModel)]='manufacturedAfter' type='text'>
-            </ion-input>
+<!--             <ion-input [(ngModel)]='manufacturedAfter' type='text'>
+            </ion-input> -->
+
             <ionic-selectable item-content [items]="yearsMapping"
              [canSearch]="true" (onChange)="yomChange($event)"
-            [canClear]="true" [shouldFocusSearchbar]="true">
+            [canClear]="true" [shouldFocusSearchbar]="true" [(ngModel)]='manufacturedAfter'>
           </ionic-selectable>
+
             <ion-icon *ngIf='manufacturedAfter!==""' slot='end' style='margin-bottom:-15px'
               (click)='clearManufactureYear("manufacturedAfter")' name='close'></ion-icon>
           </ion-item>
-          <ion-item style='--highlight-height:0;max-width:270px;padding-right:10px;'>
+          <ion-item style='--highlight-height:0;max-width:300px;padding-right:10px;'>
             <ion-label position='floating'>Manufactured Before</ion-label>
-            <ion-input [(ngModel)]='manufacturedBefore' type='text'>
-            </ion-input>
+<!--             <ion-input [(ngModel)]='manufacturedBefore' type='text'>
+            </ion-input> -->
+
+            <ionic-selectable item-content [items]="yearsMapping"
+             [canSearch]="true" (onChange)="yomChange($event)"
+            [canClear]="true" [shouldFocusSearchbar]="true" [(ngModel)]='manufacturedBefore'>
+          </ionic-selectable>
+
             <ion-icon *ngIf='manufacturedBefore!==""' slot='end' style='margin-bottom:-15px'
               (click)='clearManufactureYear("manufacturedBefore")' name='close'></ion-icon>
           </ion-item>
-        </ion-row>
+        <!-- </ion-row> -->
       </ion-col>
     </ion-row>
     <div margin-top="" style="color:grey" text-center="">
