--- a/rfidQbe/src/app/home/home.page.html
+++ b/rfidQbe/src/app/home/home.page.html
@@ -68,7 +68,7 @@
 
               <!-- <ion-icon style='width:28px;height:28px' src='../../assets/icon/eye.svg'></ion-icon> -->
               <ion-item style="max-width: 200px">
-                <ion-label position='floating'>Asset Type</ion-label>
+                <ion-label position='stacked'>Asset Type</ion-label>
                 <ionic-selectable type='text' item-content formControlName='assetType' [items]="assetsTypeMapping"
                   itemValueField="id" itemTextField="name" [canSearch]="true" (onChange)="portChange($event)"
                   [canClear]="true" [isMultiple]="true" [shouldFocusSearchbar]="true">
@@ -89,7 +89,7 @@
                 margin-left: 8px;height:20px;"
                   (click)='presentModal("message", "queryString","ManufactureYearFilter","Manufacture Year Filter")'>
                 </ion-icon>
-                <ion-label position='floating' >Manufacture Year</ion-label>
+                <ion-label position='stacked' >Manufacture Year</ion-label>
 <!--                 <ion-label position='floating' *ngIf='!(lessThan==="" && moreThan==="")'>{{manufacturedYearFilterValue}}
                 </ion-label> -->
                 <!--                 <ion-label position='floating' *ngIf='lessThan!=="" && moreThan===""'>M/f Before {{lessThan}}
@@ -108,7 +108,7 @@
                 margin-left: 8px;height:20px;"
                   (click)='presentModal("message", "queryString","ManufactureYearFilter","Manufacture Year Filter")'>
                 </ion-icon>
-                <ion-label position='floating' >Manufacture Year</ion-label>
+                <ion-label position='stacked' >Manufacture Year</ion-label>
                 <ion-input (click)='presentModal("message", "queryString","ManufactureYearFilter","Manufacture Year Filter")' type='text' value='{{manufacturedYearFilterValue}}'></ion-input>
               </ion-item>
 
@@ -122,7 +122,7 @@
                   (click)='presentModal("message", "queryString","DateUseFilter","Date Put Into Use Filter")'>
                 </ion-icon>
 
-                <ion-label position='floating'>
+                <ion-label position='stacked'>
                   <span style='color:red'
                     *ngIf='formGroup.controls["dateUse"].invalid ||formGroup.controls["dateUseLessThan"].invalid || formGroup.controls["dateUseMoreThan"].invalid'>
                     Invalid Date.</span>
@@ -138,7 +138,7 @@
                   (click)='presentModal("message", "queryString","DateUseFilter","Date Put Into Use Filter")'>
                 </ion-icon>
 
-                <ion-label position='floating'>
+                <ion-label position='stacked'>
                   Date Put Into Use</ion-label>
                 <ion-input type='text'
                   (click)='presentModal("message", "queryString","DateUseFilter","Date Put Into Use Filter")'
@@ -157,7 +157,7 @@
                     -->
 
               <ion-item>
-                <ion-label position='floating'>Owner</ion-label>
+                <ion-label position='stacked'>Owner</ion-label>
                 <ionic-selectable item-content formControlName='owner' [items]="ownersMapping" itemValueField="id"
                   itemTextField="name" [canSearch]="true" (onChange)="portChange($event)" [canClear]="true"
                   [isMultiple]="true" [shouldFocusSearchbar]="true">
@@ -172,7 +172,7 @@
           </ion-item> -->
 
               <ion-item>
-                <ion-label position='floating'>Vehicle Type</ion-label>
+                <ion-label position='stacked'>Vehicle Type</ion-label>
                 <ionic-selectable item-content formControlName='vehicleType' [items]="vehiclesTypeMapping"
                   itemValueField="id" itemTextField="name" [canSearch]="true" (onChange)="portChange($event)"
                   [canClear]="true" [isMultiple]="true" [shouldFocusSearchbar]="true">
@@ -181,7 +181,7 @@
             </ion-col>
             <ion-col style='    max-width: 160px;'>
               <ion-item text-wrap style='--highlight-height:0'>
-                <ion-label primary position="floating">
+                <ion-label primary position="stacked">
                   <span style='color:red' *ngIf='formGroup.controls["serialNo"].invalid'>
                     Max 6 digits.
                   </span>
@@ -212,7 +212,7 @@
 
 
               <ion-item>
-                <ion-label position='floating'>Manufacturer Code</ion-label>
+                <ion-label position='stacked'>Manufacturer Code</ion-label>
                 <ionic-selectable item-content formControlName='vehicleMfcCode' [items]="manufacturersCodeMapping"
                   itemValueField="id" itemTextField="name" [canSearch]="true" (onChange)="portChange($event)"
                   [canClear]="true" [isMultiple]="true" [shouldFocusSearchbar]="true">
