--- a/rfidQbe/src/app/modal/modal.page.html
+++ b/rfidQbe/src/app/modal/modal.page.html
@@ -37,7 +37,7 @@
               (click)='clearDate("dateUseMoreThan")' name='close'></ion-icon>
           </ion-item>
           <ion-item style='--highlight-height:0;max-width:270px;padding-right:10px;'>
-            <ion-label position='stacked'>Put Into Use To</ion-label>
+            <ion-label position='stacked'>Put Into Use Upto</ion-label>
             <ion-input [(ngModel)]='dateUseLessThan' (click)='openCalendar("dateUseLessThan","Used Before")'
               type='text'>
             </ion-input>
