--- a/rfidQbe/src/app/home/home.page.html
+++ b/rfidQbe/src/app/home/home.page.html
@@ -177,6 +177,6 @@
     <span>Version - 0.0.1</span>
   </div>
   <div *ngIf='updateAvailable' margin-top="" style="color:grey" text-center="">
-    <span>Update Available. Kindly Refresh.</span>
+    <span>Update Available. <span (click)='refresh()'>Kindly Refresh.</span></span>
   </div>
 </ion-content>
